--- a/info.yaml
+++ b/info.yaml
@@ -1,7 +1,7 @@
 # Tiny Tapeout project information
 project:
   title:        "FSM based Pipeline Hazard Resolver in a RISC-V Processor"      # Project title
-  author:       "Pushkar R Kulkarni, Harsh Kumar, Dr. Shyalshree N, Ravish Aradhya H V, RV College of Engineering"      # Your name
+  author:       "Pushkar R Kulkarni, Harsh Kumar, Manaswi, Tushar Masur, Dr. Shyalshree N, Ravish Aradhya H V, RV College of Engineering"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "Pipeline Hazard Resolution in RISCV Processor through Finite State Machine"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
