--- a/info.yaml
+++ b/info.yaml
@@ -1,6 +1,6 @@
 # Tiny Tapeout project information
 project:
-  title:        "FSM based RISC-V Pipeline Hazard Resolver"      # Project title
+  title:        "FSM based RISC-V Pipeline Hazard Resolution Unit"      # Project title
   author:       "Pushkar R Kulkarni, Harsh Kumar, Manaswi, Dhruv Miraskar, Shyalshree N, RV College of Engineering, Bengaluru"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "Design of Finite State Machine based Pipeline Hazard Resolution Unit for RISCV Processor"      # One line description of what your project does
